# qwen-unlearning-research

./: .gitignore  README.md  main.py  pyproject.toml
docs/: full_results_table.tex  issue_qwen.md
outputs/: full_benchmark_log.txt
src/: __init__.py  baselines.py  benchmark.py  benchmark_unsloth.py  data_utils.py  dsu.py  iwap.py  metrics.py  model_utils.py  model_utils_unsloth.py  trou.py
