[project]
name = "qwen-unlearning-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.9,<0.10",
    "unsloth>=2025.7.2",
]
